# StockInsightAPI

./: .env  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  inspect_data.py  main.py  pyproject.toml  requirements.txt  run.py
app/: main.py  main_demo.py  main_docker.py  main_production.py  main_test.py
app/auth/: auth_utils.py  dependencies.py
app/core/: config.py  logging.py
app/database/: database.py  models.py
app/indicators/: __init__.py  bollinger.py  ema.py  macd.py  rsi.py  sma.py
app/models/: schemas.py
app/routers/: auth.py  indicators.py  indicators_production.py  indicators_test.py
app/services/: cache_service.py  data_service.py  rate_limit_redis.py  rate_limit_service.py
tests/: conftest.py  test_auth.py  test_indicators.py
