[project]
name = "kalpi-tech-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioredis>=2.0.1",
    "alembic>=1.16.2",
    "bcrypt>=4.3.0",
    "fastapi>=0.115.14",
    "httpx>=0.28.1",
    "pandas>=2.3.0",
    "passlib[bcrypt]>=1.7.4",
    "polars>=1.31.0",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.35.0",
]
